FWB: Squashed commit for Expanded Desktop [1/2]
Bringup expanded desktop and implement per-user configuration.

Also add tile

Change-Id: I90d834d788b3050a3f4c11dda9b6d1a7d79546cc

Create configurable default expanded desktop style.

@mydongistiny: updated for oreo
Change-Id: I90c7f8544cda9b91fb9b700fcf146f4e58b15a26
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

ExpandedDesktop: Fix privateFlags for 8.1

Change-Id: Id9b10adcebc0b32c46127ad4e9e19ac1a8fcb08a
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Varun Date <date.varun123@gmail.com>

QS: Add Expanded Desktop QS Tile

Change-Id: Ib6ea6e3cba9f26de8d97c2eb5cda9728365fd077
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Varun Date <date.varun123@gmail.com>

QS: Expanded Desktop Tile Reloaded

Now switches between full, off and if you have a navbar enabled also statusbar and navbar

Edit: adjust labels a little bit

Change-Id: Ibb5c67deb4f0ac1bf17e3b0b0c4ff1f7f7f63aea
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/packages/SystemUI/res/values/jisoo_strings.xml
+++ b/packages/SystemUI/res/values/jisoo_strings.xml
@@ -25,6 +25,11 @@
     <string name="accessibility_quick_settings_sync_on">Sync on</string>
     <string name="accessibility_quick_settings_sync_changed_off">Sync turned off</string>
     <string name="accessibility_quick_settings_sync_changed_on">Sync turned on</string>
+    <string name="quick_settings_expanded_desktop_label">Full screen</string>
+    <string name="quick_settings_expanded_desktop_on">Full screen</string>
+    <string name="quick_settings_expanded_navigation_off">Statusbar only</string>
+    <string name="quick_settings_expanded_statusbar_off">Navbar only</string>
+    <string name="quick_settings_expanded_desktop_off">Normal screen</string>
     <string name="quick_settings_sync_on">Sync on</string>
     <string name="quick_settings_sync_off">Sync off</string>
     <string name="quick_settings_bluetooth_off">BT off</string>
