--- a/packages/SystemUI/res/values/jisoo_strings.xml
+++ b/packages/SystemUI/res/values/jisoo_strings.xml
@@ -71,4 +71,16 @@
     <string name="global_action_screenrecord">Screenrecord</string>
     <string name="global_action_flashlight">Flashlight</string>
 
+    <!-- Pie controls -->
+    <string name="pie_date_format">EEEE, yyyy-mm-dd</string>
+    <string name="pie_hour_format_12">hh:mm</string>
+    <string name="pie_hour_format_24">HH:mm</string>
+    <string name="pie_am_pm">a</string>
+    <string name="pie_state_name">Pie controls</string>
+    <string name="pie_state_summary">Use pie controls while in immersive mode</string>
+    <string name="pie_battery_level">""</string>
+    <string name="quick_settings_pie">Pie</string>
+    <string name="quick_settings_pie_on">Pie on</string>
+    <string name="quick_settings_pie_off">Pie off</string>
+
 </resources>
