--- a/core/res/res/anim/recent_slide_out_down.xml
+++ b/core/res/res/anim/recent_slide_out_down.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2017 Benzo Rom
+<!-- Copyright (C) 2009 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,17 +13,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- sleep long press back -->
-    <integer name="config_backSleepTimeout">600</integer>
+<translate
+    xmlns:android="http://schemas.android.com/apk/res/android"
 
-    <!-- EdgeGesture service -->
-    <java-symbol type="dimen" name="edge_gesture_trigger_distance" />
-    <java-symbol type="dimen" name="edge_gesture_perpendicular_distance" />
-    <java-symbol type="dimen" name="edge_gesture_trigger_thickness" />
+    android:fromYDelta="0"
+    android:toYDelta="100%p"
 
-    <!-- The duration (in milliseconds) of slim recent app screen animation. -->
-    <integer name="config_recentDefaultDur">150</integer>
-</resources>
-
+    android:duration="@android:integer/config_recentDefaultDur" />
