--- a/core/res/res/values/jisoo_styles.xml
+++ b/core/res/res/values/jisoo_styles.xml
@@ -30,4 +30,9 @@
         <item name="windowEnterAnimation">@anim/dialog_enter</item>
         <item name="windowExitAnimation">@anim/dialog_exit</item>
     </style>
+    <!-- Slim recent app screen animation -->
+    <style name="Animation.SlimRecentScreen" parent="">
+        <item name="android:windowEnterAnimation">@anim/recent_slide_in_up</item>
+        <item name="android:windowExitAnimation">@anim/recent_slide_out_down</item>
+    </style>
 </resources>
