--- a/packages/SystemUI/res/values/jisoo_strings.xml
+++ b/packages/SystemUI/res/values/jisoo_strings.xml
@@ -34,6 +34,9 @@
     <string name="quick_settings_caffeine_label">Caffeine</string>
     <string name="accessibility_quick_settings_caffeine_off">Caffeine off</string>
     <string name="accessibility_quick_settings_caffeine_on">Caffeine on</string>
+    <string name="quick_settings_flashlight_on">Torch on</string>
+    <string name="quick_settings_flashlight_off">Torch off</string>
+    <string name="quick_settings_flashlight_unavailable">Not available</string>
     <string name="quick_settings_location_battery_saving">Network only</string>
     <string name="quick_settings_location_gps_only">GPS only</string>
     <string name="quick_settings_location_high_accuracy">High accuracy</string>
