--- a/packages/SystemUI/res/values/jisoo_strings.xml
+++ b/packages/SystemUI/res/values/jisoo_strings.xml
@@ -37,6 +37,8 @@
     <string name="quick_settings_flashlight_on">Torch on</string>
     <string name="quick_settings_flashlight_off">Torch off</string>
     <string name="quick_settings_flashlight_unavailable">Not available</string>
+    <string name="quick_settings_hotspot_on">Hotspot on</string>
+    <string name="quick_settings_hotspot_off">Hotspot off</string>
     <string name="quick_settings_location_battery_saving">Network only</string>
     <string name="quick_settings_location_gps_only">GPS only</string>
     <string name="quick_settings_location_high_accuracy">High accuracy</string>
