--- a/packages/SystemUI/res/values/jisoo_strings.xml
+++ b/packages/SystemUI/res/values/jisoo_strings.xml
@@ -45,6 +45,8 @@
     <string name="quick_settings_location_gps_only">GPS only</string>
     <string name="quick_settings_location_high_accuracy">High accuracy</string>
     <string name="quick_settings_location_off">Location off</string>
+    <string name="quick_settings_night_display_on">Night Light on</string>
+    <string name="quick_settings_night_display_off">Night Light off</string>
     <string name="accessibility_quick_settings_location_battery_saving">Location reporting: battery saving mode.</string>
     <string name="accessibility_quick_settings_location_gps_only">Location reporting: sensors only mode.</string>
     <string name="accessibility_quick_settings_location_high_accuracy">Location reporting: high accuracy mode.</string>
